light data saves to file, read when server starts, last light colour saved

--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,21 @@
 	
 	<body>
 	
-    <!-- We will put our React component inside this div. -->
-	<div id="container"></div>
 
-    <!-- Load our React component. -->
+
+	
+	
+	<div>
+		<form>
+		<label for="col">colour:</label><br>
+		<input type="text" id="col" name="col" value="">
+		</form>
+
+	</div>
+	<!-- We will put our React component inside this div. -->
+	<div id="container"></div>
+	
+	<!-- Load our React component. -->
 	<script src="test.js"></script>
 
 	</body>
